# rhubarb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: pr.h
include/: CSR.h  Edge.h  EdgeListReader.h  FastHilbert.h  IndexedEdge.h  RecursiveBlock.h  Rhubarb.h  WeightedEdge.h  io.h  likwid_defines.h  platform_atomics.h  util.h
src/: compress.cpp  io.cpp  rhubarb_main.cpp  translate.cpp  util.cpp
